# Model_Cards_Writing_Tool

./: .gitignore  1754652406__model_card.md  1754689050_model_card(8).json  1_📝_form.py  MarkdownTemplate.md  README.md  about.md  appendix_Template MIRO(2).pptx  appendix_model_card(22).md  appendix_test_extra.py  appendix_votante.h  appendix_votantes.txt  appendix_votos.txt  combined.md  current_card.md  current_editable.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  extract_code.py  generador_lista.py  helpers.py  io_utils.py  json_template.py  language_model_template1.md  lets_combine.md  main.py  markdownTagExtract.py  md_renderer.py  middleMan.py  model_card(21).md  model_card(23).md  model_card(24).md  model_card(25).md  model_card(26).md  model_card(29).md  model_card(31).md  model_card(33).md  model_card(34).md  model_card(35).md  model_card(36).md  (+30 more)
.imports/import_02549f5a716b4b139b1f937f5a5c55b1/: model_card.json
.imports/import_1a2453120e2940568cc1820e18e1f541/: model_card.json
.imports/import_899194f594c849f79a50f0b905884966/: model_card.json
.imports/import_b365d2cb2bda4df382d5208d7adeda9d/appendix/: Template_MIRO.pptx
.imports/import_fd3e97c87a154085984dbbdf5409110a/: model_card.json
.streamlit/: config.toml
custom_pages/: 2_🏋️‍♀️_Model_training.py  3__Model_Evaluation.py  4__Limits_and_Risks.py  7__Model_Examination.py  appendix.py  card_metadata.py  evaluation_data_mrc.py  model_basic_information.py  model_card(28).md  model_card_info.py  other_considerations.py  technical_specifications.py  training_data.py  warnings.py
pages/: 10_ 📁_Technical Specifications.py  11_ 📬_Model_Card_Contact.py  12_👩‍💻_How_To_Get_Started.py  13_🔖_Model_Card_Authors.py  14_📚_Glossary.py  15_More_Information.py  1_👀_CardProgress.py  1_👀_Technical_Specifications.py  2_🏋️‍♀️_Model_training.py  2_📜_Model_Details.py  3_ 🏗_Uses.py  3_🔬_Model_Evaluation.py  4_⚠️_Limits_and_Risks.py  5_🏋️‍♀️_Model_training.py  6_🔬_Model_Evaluation.py  7_🔎_Model_Examination.py  8_🌏_Environmental_Impact.py  9_📌_Citation.py
temp_uploaded_filed_Dir/: modelcard_template_new_spec.md
templates/: card_metadata.md.j2  card_metadata_template.md.j2  evaluations.md.j2  model_basic_information.md.j2  model_card_master.md.j2  other_considerations.md.j2  sections.py  technical_specifications.md.j2  training.md.j2
tests/: conftest.py  test_uploads_manager.py
uploads/: model_card(41).md  model_card(42).md
uploads/appendix/: appendix_3f920255_warnings.py
